# functional-etl

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
data/: orders.csv
etl/: dune-project  etl.opam
etl/data/: order_item.csv  order_totals.csv
etl/data/fr/: financial_records.csv  financial_records.sqlite
etl/data/ot/: order_totals.csv  order_totals.sqlite
etl/lib/: dune  extract.ml  load.ml  parse.ml  transform.ml  types.ml
etl/test/: dune  test_parse.ml  test_transform.ml
