(lang dune 3.17)

(name etl)

(generate_opam_files true)

(source
 (github victorlga/functional-etl))

(authors "Victor Assis <victorluisgassis@gmail.com>")

(license MIT)

(documentation https://victorlga.github.io/etl-ocaml)

(package
 (name etl)
 (synopsis "An ETL pipeline implemented in OCaml")
 (description "A robust Extract, Transform, Load (ETL) pipeline written in OCaml, designed to process order data from CSV files, transform it based on user-specified criteria, and load results into CSV and SQLite formats.")
 (depends 
  ocaml
  dune
  odoc
  csv
  sqlite3
  cohttp-lwt-unix
  lwt)
 (tags
  ("etl" "ocaml" "data-processing" "csv" "sqlite")))
