(test
 (name test_parse)
 (modules test_parse)
 (libraries ounit2 lib))

(test
 (name test_extract)
 (modules test_extract)
 (libraries ounit2 lib))

(test
 (name test_transform)
 (modules test_transform)
 (libraries ounit2 lib))

(test
 (name test_load)
 (modules test_load)
 (libraries ounit2 lib))
